[package]
name = "mcp_forecast"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = { version = "1.2", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
